--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Application
 
 PORT=5000
+NODE_ENV=production
+ORIGIN=http://localhost:5000
 PASSWORD_SALT_ROUNDS=10
 AUTH_TOKEN_VALID_SEC=3600              # 1 hour
 AUTH_TOKEN_REMEMBER_VALID_SEC=1209600  # 14 days
